--- a/learning system.html
+++ b/learning system.html
@@ -51,7 +51,7 @@
               <li><a href="https://www.youtube.com/watch?v=9CHfHuFBTw8" target="blank">MTH166</a></li>
             </ul>
           </li>
-          <li><a href="Feedback Form.html" target="blank">
+          <li><a href="Feedback.html" target="blank">
           Feedback</a></li>
           <li><a href="gallarycars.html" target="blank">
           Contact Us</a></li>
